@@ -343,7 +343,7 @@ public class FromJSONFieldManager extends AbstractFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                    coll = (Collection<Object>) instanceType.newInstance();
+                    coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -445,7 +445,7 @@ public class FromJSONFieldManager extends AbstractFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), false);
-                    map = (Map) instanceType.newInstance();
+                    map = (Map) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
